Setup positioning for sidebar and header

--- a/index.html
+++ b/index.html
@@ -9,10 +9,60 @@
 <body>
     <div class="container">
         <div class="header">
+            <div class="search-profile">
+                
+                <form class="search-bar">
+                    <div class="search-button-container"><button class="search"><img class="search-logo" src="./images/magnify.svg"></button></div>
+                    <div class="search-bar-container"><input class="search-bar-input" type="search"></div>
+                </form>
+                
+                <div class="profile-info">
+                    <div class="notifications">
+                        <img src="/images/bell-ring-outline.svg">
+                    </div>
+                    <div class="profile">
+                        <div class="logo">
+                            <img src="images/profile.png">
+                        </div>
+                        <div class="user">
+                            Thomas Gustafson
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+            <div class="actions">
+                <div class="greeting">
+                    <div class="user-logo">
+                        <img src="images/profile.png">
+                    </div>
+                    <div class="greeting-text">
+                        <p>Hi there,</p>
+                        <h2>Thomas Gustafson (@Thomas)</h2>
+                    </div>
+                </div>
+                <div class="button-container"><button>New</button></div>
+                <div class="button-container"><button>Upload</button></div>
+                <div class="button-container"><button>Share</button></div>
+            </div>
         </div>
         <div class="sidebar">
-
+            <div class="dashboard-logo">
+                Dashboard
+            </div>
+            <ul class="view-controls">
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+            <ul class="useful-links">
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
         </div>
         <div class="main-content">
 
