Setup positioning for main content elements

--- a/index.html
+++ b/index.html
@@ -65,7 +65,169 @@
             </ul>
         </div>
         <div class="main-content">
+            <div class="projects">
+                <h3>Your Projects</h3>
+                <div class="project-card-container">
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div></div>
+                            <button><img src="images/star-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/eye-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/share-variant-outline.svg" class="actions share"></button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div></div>
+                            <button><img src="images/star-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/eye-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/share-variant-outline.svg" class="actions share"></button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div></div>
+                            <button><img src="images/star-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/eye-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/share-variant-outline.svg" class="actions share"></button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div></div>
+                            <button><img src="images/star-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/eye-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/share-variant-outline.svg" class="actions share"></button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div></div>
+                            <button><img src="images/star-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/eye-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/share-variant-outline.svg" class="actions share"></button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div></div>
+                            <button><img src="images/star-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/eye-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/share-variant-outline.svg" class="actions share"></button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div></div>
+                            <button><img src="images/star-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/eye-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/share-variant-outline.svg" class="actions share"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="info">
+                <div class="announcements">
+                    <h3>Announcements</h3>
+                    <div class="announcement-container">
+                        <div class="announcement">
+                            <h5>Site maintenance</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis deleniti dolor reiciendis itaque ipsa atque incidunt, iste expedita natus fuga nostrum, cum, vel rerum ut? Quae impedit aliquid excepturi magnam.</p>
+                        </div>
+                        <div class="separator">
 
+                        </div>
+                        <div class="announcement">
+                            <h5>Site maintenance</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis deleniti dolor reiciendis itaque ipsa atque incidunt, iste expedita natus fuga nostrum, cum, vel rerum ut? Quae impedit aliquid excepturi magnam.</p>
+                        </div>
+                        <div class="separator">
+
+                        </div>
+                        <div class="announcement">
+                            <h5>Site maintenace</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis deleniti dolor reiciendis itaque ipsa atque incidunt, iste expedita natus fuga nostrum, cum, vel rerum ut? Quae impedit aliquid excepturi magnam.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="trending-container">
+                        <div class="trending-user">
+                            <div class="trending-profile-icon"><img src="images/profile.png"></div>
+                            <div class="trending-user-info">
+                                <div class="trending-handle">
+                                    @tegan
+                                </div>
+                                <div class="trending-project">
+                                    World Peace Builder
+                                </div>
+                            </div>
+                        </div>
+                        <div class="trending-user">
+                            <div class="trending-profile-icon"><img src="images/profile.png"></div>
+                            <div class="trending-user-info">
+                                <div class="trending-handle">
+                                    @tegan
+                                </div>
+                                <div class="trending-project">
+                                    World Peace Builder
+                                </div>
+                            </div>
+                        </div>
+                        <div class="trending-user">
+                            <div class="trending-profile-icon"><img src="images/profile.png"></div>
+                            <div class="trending-user-info">
+                                <div class="trending-handle">
+                                    @tegan
+                                </div>
+                                <div class="trending-project">
+                                    World Peace Builder
+                                </div>
+                            </div>
+                        </div>
+                        <div class="trending-user">
+                            <div class="trending-profile-icon"><img src="images/profile.png"></div>
+                            <div class="trending-user-info">
+                                <div class="trending-handle">
+                                    @tegan
+                                </div>
+                                <div class="trending-project">
+                                    World Peace Builder
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
