--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <img src="images/profile.png">
                         </div>
                         <div class="user">
-                            Thomas Gustafson
+                            <h3>Thomas Gustafson</h3>
                         </div>
                     </div>
 
@@ -48,21 +48,31 @@
         </div>
         <div class="sidebar">
             <div class="dashboard-logo">
-                Dashboard
+                <div class="sidebar-logo"><img src="./images/view-dashboard.svg"></div>
+                <h4>Dashboard</h4>
             </div>
-            <ul class="view-controls">
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
-            </ul>
-            <ul class="useful-links">
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
-            </ul>
+            <div class="view-controls">
+                <div class="sidebar-logo"><img src="./images/home.svg"></div>
+                <h4>Home</h4>
+                <div class="sidebar-logo"><img src="./images/card-account-details-outline.svg"></div>
+                <h4>Profile</h4>
+                <div class="sidebar-logo"><img src="./images/message.svg"></div>
+                <h4>Messages</h4>
+                <div class="sidebar-logo"><img src="./images/clock-time-three.svg"></div>
+                <h4>History</h4>
+                <div class="sidebar-logo"><img src="./images/note-multiple.svg"></div>
+                <h4>Tasks</h4>
+                <div class="sidebar-logo"><img src="./images/account-group.svg"></div>
+                <h4>Communities</h4>
+            </div>
+            <div class="useful-links">
+                <div class="sidebar-logo"><img src="./images/cog.svg"></div>
+                <h4>Settings</h4>
+                <div class="sidebar-logo"><img src="./images/help-box.svg"></div>
+                <h4>Support</h4>
+                <div class="sidebar-logo"><img src="./images/shield-check.svg"></div>
+                <h4>Privacy</h4>
+            </div>
         </div>
         <div class="main-content">
             <div class="projects">
@@ -82,7 +92,19 @@
                     </div>
                     <div class="project-card">
                         <div class="project-info">
-                            <h3>Super Cool Project</h3>
+                            <h3>Impossible App</h3>
+                            <p>loremLorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div></div>
+                            <button><img src="images/star-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/eye-plus-outline.svg" class="actions"></button>
+                            <button><img src="images/share-variant-outline.svg" class="actions share"></button>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3>Easy Peasy App</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
                         </div>
                         <div class="project-actions">
@@ -94,7 +116,7 @@
                     </div>
                     <div class="project-card">
                         <div class="project-info">
-                            <h3>Super Cool Project</h3>
+                            <h3>Ad Blocker</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
                         </div>
                         <div class="project-actions">
@@ -106,7 +128,7 @@
                     </div>
                     <div class="project-card">
                         <div class="project-info">
-                            <h3>Super Cool Project</h3>
+                            <h3>Money Maker</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
                         </div>
                         <div class="project-actions">
@@ -118,19 +140,7 @@
                     </div>
                     <div class="project-card">
                         <div class="project-info">
-                            <h3>Super Cool Project</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
-                        </div>
-                        <div class="project-actions">
-                            <div></div>
-                            <button><img src="images/star-plus-outline.svg" class="actions"></button>
-                            <button><img src="images/eye-plus-outline.svg" class="actions"></button>
-                            <button><img src="images/share-variant-outline.svg" class="actions share"></button>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="project-info">
-                            <h3>Super Cool Project</h3>
+                            <h3>Less Cool Project</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem doloremque deserunt amet dolore optio reprehenderit deleniti? Esse quidem quam officiis id libero, nobis voluptas minima, qui deserunt, harum voluptatum.</p>
                         </div>
                         <div class="project-actions">
@@ -188,7 +198,7 @@
                                     @tegan
                                 </div>
                                 <div class="trending-project">
-                                    World Peace Builder
+                                    <p>World Peace Builder</p>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +209,7 @@
                                     @tegan
                                 </div>
                                 <div class="trending-project">
-                                    World Peace Builder
+                                    <p>World Peace Builder</p>
                                 </div>
                             </div>
                         </div>
@@ -210,7 +220,7 @@
                                     @tegan
                                 </div>
                                 <div class="trending-project">
-                                    World Peace Builder
+                                    <p>World Peace Builder</p>
                                 </div>
                             </div>
                         </div>
@@ -221,7 +231,7 @@
                                     @tegan
                                 </div>
                                 <div class="trending-project">
-                                    World Peace Builder
+                                    <p>World Peace Builder</p>
                                 </div>
                             </div>
                         </div>
