Fix file path for notification icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 
                 <div class="profile-info">
                     <div class="notifications">
-                        <img src="/images/bell-ring-outline.svg">
+                        <img src="./images/bell-ring-outline.svg">
                     </div>
                     <div class="profile">
                         <div class="logo">
